  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.75 2004/06/24 21:14:50 kakace Exp $
==========================================================================

2.9000
------
2.9008-492  imp: ppc: Faster GARSP Vector core
            imp: all: Added an option to rotate log files at local time or UTC
                      time (#2613)
            fix: all: Made week number ISO 8601 compliant (#3336)
            imp: all: Display which cruncher load/save/complete work (#2954)
            imp: all: Log more error messages (#3611)
            imp: macosx: Made the buffer threshold limits hw-dependant (#3626)
            fix: ppc: Select core #5 on PPC 601 (#3685)
            fix: macosx: Now recognize PPC 750FX (#3675)
            fix: macosx: No longer read the TAU on G4/G5.
            imp: solaris: Identify SPARC64-IV/US-IV (#3693)
            fix: all: Fixed the ideal completion time inaccuracy (#3495)
            fix: some: OGR crunchers no longer busy-wait (#3618)
            fix: all: Refuse unknown contest/core specified with -bench*/-test
            fix: all: Added an exponential backoff of the retry timer for
                      server connections/remote buffers (#3648)
            imp: all: Client no longer exit when no OGR-P2 work is available
                      (#3680, #3691)

2.9008-491  chg: all: Disabled OGR (Phase 1) contest
            fix: all: Client didn't stop as instructed (#3672)
            fix: macosx: Fixed an issue caused by white spaces in file paths.
            imp: macosx: Reworked the Startup Items implementation.
            imp: macosx: Display CPU temp. upon startup (if enabled/available)